--- a/build.gradle
+++ b/build.gradle
@@ -90,6 +90,7 @@ neoForge {
             // "REGISTRIES": For firing of registry events.
             // "REGISTRYDUMP": For getting the contents of all registries.
             systemProperty 'forge.logging.markers', 'REGISTRIES'
+            jvmArguments.add('-Djdk.reflect.allowWrite=true')
 
             // Recommended logging level for the console
             // You can set various levels here.
@@ -133,10 +134,10 @@ dependencies {
     // The group id is ignored when searching -- in this case, it is "blank"
     // implementation "blank:coolmod-${mc_version}:${coolmod_version}"
     if (System.getProperty("idea.active")) {
-        implementation("cn.ussshenzhou:t88:0.10.+")
-        annotationProcessor("cn.ussshenzhou:t88:0.10.+")
+        implementation("cn.ussshenzhou:t88:0.+")
+        annotationProcessor("cn.ussshenzhou:t88:0.+")
     } else {
-        def t88FileId = '5560995'
+        def t88FileId = '5617531'
         implementation 'curse.maven:t88-663112:' + t88FileId
         annotationProcessor 'curse.maven:t88-663112:' + t88FileId
     }
