minimap! sodium bad.

--- a/build.gradle
+++ b/build.gradle
@@ -19,11 +19,18 @@ version = mod_version
 group = mod_group_id
 
 repositories {
-    maven {
-        url "https://cursemaven.com"
-        content {
+    exclusiveContent {
+        forRepository {
+            maven {
+                url "https://cursemaven.com"
+            }
+        }
+        filter {
             includeGroup "curse.maven"
         }
+    }
+    flatDir {
+        dir 'libs'
     }
     mavenCentral()
     mavenLocal()
@@ -133,16 +140,20 @@ dependencies {
     // This maps to ./libs/coolmod-${mc_version}-${coolmod_version}.jar
     // The group id is ignored when searching -- in this case, it is "blank"
     // implementation "blank:coolmod-${mc_version}:${coolmod_version}"
-    if (System.getProperty("idea.active")) {
-        implementation("cn.ussshenzhou:t88:0.+")
-        annotationProcessor("cn.ussshenzhou:t88:0.+")
-    } else {
+    //if (System.getProperty("idea.active")) {
+    implementation("cn.ussshenzhou:t88:0.+")/*{
+        exclude group: "curse.maven", module: "irisshaders-455508"
+    }*/
+    annotationProcessor("cn.ussshenzhou:t88:0.+")
+    /*} else {
         def t88FileId = '5617531'
         implementation 'curse.maven:t88-663112:' + t88FileId
         annotationProcessor 'curse.maven:t88-663112:' + t88FileId
-    }
+    }*/
+
+    //implementation "curse.maven:irisshaders-455508:5663587"
     // Example mod dependency using a file as dependency
-    // implementation files("libs/coolmod-${mc_version}-${coolmod_version}.jar")
+    implementation files("libs/sodium-neoforge-0.6.0-beta.1+mc1.21.jar")
 
     // Example project dependency using a sister or child project:
     // implementation project(":myproject")
@@ -201,4 +212,28 @@ idea {
         downloadSources = true
         downloadJavadoc = true
     }
+}
+
+tasks.register("runWithRenderDoc", Exec) {
+    def javaExecTask = tasks.withType(JavaExec).named("runClient").get()
+    def javaHome = javaExecTask.javaLauncher.get().metadata.installationPath.asFile.absolutePath
+
+    commandLine = [
+            "C:\\Program Files\\RenderDoc\\renderdoccmd.exe",
+            "capture",
+            "--opt-hook-children",
+            "--wait-for-exit",
+            "--working-dir",
+            ".",
+            "$javaHome\\bin\\java.exe",
+            "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005",
+            "-Xmx64m",
+            "-Xms64m",
+            "-Dorg.gradle.appname=gradlew",
+            "-Dorg.gradle.java.home=$javaHome",
+            "-classpath",
+            "gradle/wrapper/gradle-wrapper.jar",
+            "org.gradle.wrapper.GradleWrapperMain",
+            "runClient"
+    ]
 }
