--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,1 +1,4 @@
 public net.minecraft.client.renderer.LevelRenderer *
+public net.minecraft.client.Camera setRotation(FFF)V
+public net.minecraft.client.Camera setRotation(FF)V
+public net.minecraft.client.Camera setPosition(Lnet/minecraft/world/phys/Vec3;)V # setPosition
