--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,9 @@ repositories {
     }
     mavenCentral()
     mavenLocal()
+    repositories {
+        maven { url = "https://maven.bawnorton.com/releases" }
+    }
 }
 
 base {
@@ -98,6 +101,7 @@ neoForge {
             // "REGISTRYDUMP": For getting the contents of all registries.
             systemProperty 'forge.logging.markers', 'REGISTRIES'
             jvmArguments.add('-Djdk.reflect.allowWrite=true')
+            jvmArguments.add('-Dmixin.debug.export=true')
 
             // Recommended logging level for the console
             // You can set various levels here.
@@ -141,9 +145,9 @@ dependencies {
     // The group id is ignored when searching -- in this case, it is "blank"
     // implementation "blank:coolmod-${mc_version}:${coolmod_version}"
     //if (System.getProperty("idea.active")) {
-    implementation("cn.ussshenzhou:t88:0.+")/*{
+    implementation("cn.ussshenzhou:t88:0.+") {
         exclude group: "curse.maven", module: "irisshaders-455508"
-    }*/
+    }
     annotationProcessor("cn.ussshenzhou:t88:0.+")
     /*} else {
         def t88FileId = '5617531'
@@ -154,10 +158,15 @@ dependencies {
     //implementation "curse.maven:irisshaders-455508:5663587"
     // Example mod dependency using a file as dependency
     implementation files("libs/sodium-neoforge-0.6.0-beta.1+mc1.21.jar")
-
+    implementation "curse.maven:irisshaders-455508:5663587"
     // Example project dependency using a sister or child project:
     // implementation project(":myproject")
 
+    // MixinSquared's annotationProcessor MUST be registered BEFORE Mixin's one.
+    compileOnly(annotationProcessor("com.bawnorton.mixinsquared:mixinsquared-common:0.2.0-beta.6"))
+    implementation(jarJar("com.bawnorton.mixinsquared:mixinsquared-common:0.2.0-beta.6"))
+
+    annotationProcessor 'org.spongepowered:mixin:0.8.7:processor'
     // For more info:
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
