--- a/build.gradle
+++ b/build.gradle
@@ -144,16 +144,18 @@ dependencies {
     // This maps to ./libs/coolmod-${mc_version}-${coolmod_version}.jar
     // The group id is ignored when searching -- in this case, it is "blank"
     // implementation "blank:coolmod-${mc_version}:${coolmod_version}"
-    //if (System.getProperty("idea.active")) {
-    implementation("cn.ussshenzhou:t88:0.+") {
-        exclude group: "curse.maven", module: "irisshaders-455508"
-    }
-    annotationProcessor("cn.ussshenzhou:t88:0.+")
-    /*} else {
-        def t88FileId = '5617531'
-        implementation 'curse.maven:t88-663112:' + t88FileId
+    if (System.getProperty("idea.active")) {
+        implementation("cn.ussshenzhou:t88:0.+") {
+            exclude group: "curse.maven", module: "irisshaders-455508"
+        }
+        annotationProcessor("cn.ussshenzhou:t88:0.+")
+    } else {
+        def t88FileId = '5700086'
+        implementation('curse.maven:t88-663112:' + t88FileId) {
+            exclude group: "curse.maven", module: "irisshaders-455508"
+        }
         annotationProcessor 'curse.maven:t88-663112:' + t88FileId
-    }*/
+    }
 
     //implementation "curse.maven:irisshaders-455508:5663587"
     // Example mod dependency using a file as dependency
