Add build workflow.

--- a/gradle.properties
+++ b/gradle.properties
@@ -40,6 +40,11 @@ mod_version=0.6.0
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
 mod_group_id=org.teacon
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
-mod_authors=TeaConMC, USS_Shenzhou, ustc-zzzz
+mod_authors=TeaConMC, USS_Shenzhou, ustc-zzzz, Burning_TNT
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
 mod_description=Sign up, sign in, in-game guide map and more.
+
+# Added by TeaCon: gh owner
+mod_github_owner=TeaConMC
+# Added by TeaCon: gh repo name
+mod_github_repo=SignMeUp
